<resources>
    <string name="app_name">MusicBee Wifi Sync</string>
    <string name="title_activity_settings">MusicBee Wifi Sync</string>
    <string name="title_activity_settings2">Settings</string>
    <string name="title_activity_sync_preview">Sync Preview</string>
    <string name="title_activity_sync_status">Sync Status</string>
    <string name="title_activity_sync_error_viewer">Sync Errors</string>
    <string name="title_activity_view_error_log">Error Log</string>
    <string name="title_activity_sync_playlists">Sync Playlists</string>
    <string name="title_channel_name">Wifi Sync Status</string>
    <string name="syncNotificationInfo">Synchronizing files and playlists from MusicBee.</string>
    <string name="settingsLocateServerInfo0">Before using Wifi Sync, you need to have run a wired sync from MusicBee at least once.</string>
    <string name="settingsLocateServerInfo1">Step 1. Ensure MusicBee is running on your computer and that you have ticked \"enable Wifi transfer\" in the Device Preferences tab.</string>
    <string name="settingsLocateServerInfo2">You must grant MusicBee access to your private network when prompted by Windows Firewall.</string>
    <string name="settingsLocateServerInfo3">Step 2. Select the storage for your files:</string>
    <string name="settingsLocateServerInfo4">Step 3. (Optional) Set the IP of the PC running MusicBee if autodetect fails:</string>
    <string name="settingsStorageSettingsPrompt">Select the storage for your files:</string>
    <string name="settingsStorageInternal">Internal Storage</string>
    <string name="settingsStorageExternal">Removable SD Card</string>
    <string name="settingsStorageSdCard1">Removable SD Card (1)</string>
    <string name="settingsStorageSdCard2">Removable SD Card (2)</string>
    <string name="settingsSelectSdCard">Select the SD Card root folder</string>
    <string name="settingsGrantAccess">Grant Access</string>
    <string name="settingsDebugMode">Enable debug logging</string>
    <string name="settingsDeviceNamePrompt">Device name:</string>
    <string name="settingsLocate">Locate Server</string>
    <string name="actionSyncStart">SYNC_START</string>
    <string name="actionSyncAbort">SYNC_ABORT</string>
    <string name="actionReverseSyncStart">REVERSE_SYNC_START</string>
    <string name="syncFromPrompt">Sync from computer:</string>
    <string name="syncFromDefault">as configured in MusicBee</string>
    <string name="syncToPrompt">Reverse Sync to computer:</string>
    <string name="syncToPlaylists">playlists</string>
    <string name="syncToRatings">ratings</string>
    <string name="syncToPlaycounts">playcounts</string>
    <string name="syncToUsingPlayer">from player:</string>
    <string name="syncNow">Sync Now</string>
    <string name="syncPreview">Preview</string>
    <string name="syncPlaylistsPrompt">Specify the playlists to sync:</string>
    <string name="syncPlaylists0">No playlists selected</string>
    <string name="syncPlaylists1">1 playlist selected</string>
    <string name="syncPlaylistsN">%d playlists selected</string>
    <string name="syncPlaylistsDeleteUnselected">delete files not in the selected playlists from the device</string>
    <string name="syncStop">Stop</string>
    <string name="syncCancel">Cancel</string>
    <string name="syncMore">Sync More</string>
    <string name="syncRetry">Retry</string>
    <string name="syncSetupCompleted">Wifi Sync is now configured and ready to go.</string>
    <string name="syncStatusFAIL">FAIL</string>
    <string name="syncErrorHeader">Error</string>
    <string name="syncFileActionCopy">Copy %s</string>
    <string name="syncFileActionDelete">Delete %s</string>
    <string name="syncDeleteConfirm1">CONFIRMATION: Permanently delete 1 file from the device?</string>
    <string name="syncDeleteConfirm9">CONFIRMATION: Permanently delete %d files from the device?</string>
    <string name="syncCompleted">MusicBee synchronization successfully completed</string>
    <string name="syncCancelled">Synchronization cancelled"</string>
    <string name="syncCompletedFail">MusicBee synchronization completed with errors</string>
    <string name="syncCompletedFailMessage">MusicBee synchronization completed with errors - the following changes failed:</string>
    <string name="syncCompletedFailErrorLog">MusicBee synchronization completed with errors - view the error log for details.</string>
    <string name="syncFileNotCopied">1 file not copied</string>
    <string name="syncFilesNotCopied">%d files not copied</string>
    <string name="syncFileNotDeleted">1 file not deleted</string>
    <string name="syncFilesNotDeleted">%d files not deleted</string>
    <string name="syncFailUnknownReason">Unknown reason</string>
    <string name="syncPreviewNoResults">No changes detected</string>
    <string name="syncPreviewIgnoreErrors">exclude playlists with missing files</string>
    <string name="syncPreviewMoreResults">%d more results not displayed</string>
    <string name="reverseSyncPlaylists">reverse sync playlists</string>
    <string name="reverseSyncRatings">reverse sync ratings</string>
    <string name="reverseSyncPlaycounts">reverse sync playcounts</string>
    <string name="reverseSyncWarnings">WARNING: %s with errors.</string>
    <string name="reverseSyncFailed">WARNING: %s will not sync.</string>
    <string name="reverseSyncFilesWarning1">1 file</string>
    <string name="reverseSyncFilesWarningN">%d files</string>
    <string name="logCopyClipboard">Copy to Clipboard</string>
    <string name="errorNone">No errors.</string>
    <string name="errorServerNotFound">Server not found. Ensure MusicBee is running and Windows firewall is not blocking MusicBee.</string>
    <string name="errorConfigNotMatched">MusicBee can\'t match the device name to an existing configuration.</string>
    <string name="errorLocateServerNoConfig">MusicBee can\'t match the device name to an existing configuration. Enter the device name that is displayed in MusicBee:</string>
    <string name="errorSdCardNotFound">No external SD card is currently available for this device.</string>
    <string name="errorGrantRequired">You must grant this app access to the SD card root folder in order to function.</string>
    <string name="errorInvalidPermmissionsFolder">Folder \"%s\" is not valid.\n\nYou must select the SD card root folder and not one of it\'s sub-folder.</string>
    <string name="errorSyncGoneMadTrial">Unable to retrieve statistics from GoneMad player. The unlocked version of GoneMad is required, otherwise check the GoneMad error log.</string>
    <string name="errorSyncNonSpecific">A non-recoverable error occurred during the synchronization process. Restart the app and try again.</string>
    <string name="errorNoPlaylistsSelected">You need to select one or more playlists.</string>
    <string name="errorSyncParamsNoneSelected">You need to select at least one item to sync.</string>
    <string name="errorSyncParamsPlayerNotSelected">You need to choose the player to reverse sync from.</string>
    <string name="menuSyncSettings">Settings</string>
    <string name="menuWifiSyncLog">Error Log</string>
    <string name="menuWifiFullSync">Full Sync</string>
    <string name="menuWifiPlaylistSync">Playlist Sync</string>
    <string name="errorInvalidIp">This is not a valid IP address</string>
</resources>
